# fse18

./: .gitignore  Makefile  README.md
submissions/: README.md
submissions/DifferentialDebuggerTesting/: .gitignore  INSTALL.md  README.md  STATUS  install.sh  package.json  tsconfig.json
submissions/DifferentialDebuggerTesting/browsers/: .gitignore  download-and-extract.sh
submissions/DifferentialDebuggerTesting/browsers/firefox-profile/: prefs.js
submissions/DifferentialDebuggerTesting/bugreports/: README.md
submissions/DifferentialDebuggerTesting/bugreports/chrome-for-var-precise-breakpoints/: example.html  report.txt  screencapture.ogv
submissions/Phys-inconsistency/: LICENSE.txt  STATUS.txt
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_comm_rs232/: CMakeLists.txt  package.xml
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_comm_rs232/include/: cpr_robots_comm_rs232.h
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_comm_rs232/src/: cpr_robots_comm_rs232.cpp  test_serial.cpp
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_driver/: CMakeLists.txt  package.xml
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_hwinterface/: CMakeLists.txt  nodelet_plugins.xml  package.xml
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_hwinterface/include/: cpr_slider.h  cpr_slider_nodelet.h
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_hwinterface/launch/: slider.launch  slider_nodelet.launch
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_hwinterface/src/: cpr_slider.cpp  cpr_slider_node.cpp  cpr_slider_nodelet.cpp
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_teleop/: CMakeLists.txt  package.xml
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_teleop/include/: cpr_ctrl_loop.h  cpr_teleop_keyboard.h
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_teleop/launch/: teleop.launch
submissions/Phys-inconsistency/data/cpr_robots_driver/cpr_robots_teleop/src/: cpr_ctrl_loop.cpp  cpr_teleop_keyboard.cpp
submissions/Phys-inconsistency/src/: README.txt  constraint_collector.py
submissions/PyPI-Ecosystem/: INSTALL.md  README.md  STATUS.md  build_model.r  helpers.r  settings.py
submissions/adversarial-symbolic-execution/: CONTACT.md  INSTALL.md  LICENCE.md  README.md  STATUS.md
submissions/ajax-race/: ARTIFACT.md  PEOPLE.md  STATUS.md
submissions/android-taint/: INSTALL.md  README.md  STATUS.md
submissions/blizzard/: CITATION.txt  INSTALL.txt  README.md  STATUS.txt
submissions/blizzard/data/: java-keywords.txt  keyword.txt  stop-words-english-total.txt
submissions/blizzard/sample-input/: sample-bugs-all.txt  sample-bugs.txt
submissions/data-race/: INSTALL.md  README.md  STATUS  STATUS.md
submissions/data-race/RV-Predict/: LICENSE.md  README.md
submissions/data-race/scripts/: Goldilocks.py  HB.py  HBEpoch.py  LockSet.py  MetaInfo.py  compressTraces.py  config.py  convertTracesToReadableFormat.py  generateRVPredictTraces.py  transformGrammar.py  util.py  zipHB.py  zipLockSet.py  zipMetaInfo.py
submissions/data-race/sequitur/: sequitur  sequitur_simple
submissions/denial-of-service/: .gitignore  .gitmodules  INSTALL  LICENSE  README.md  STATUS  configure
submissions/denial-of-service/containerized/: Dockerfile
submissions/denial-of-service/data/: README.md  anonymize.py
submissions/denial-of-service/degree-of-vuln/: README.md  estimate-blowup-curve.pl  fit-curve.py  requirements.txt
submissions/denial-of-service/full-analysis/: README.md  analyze-regexp.pl
submissions/denial-of-service/semantic-meaning/: README.md  check-results-helper.pl  guess-patterns-language.pl  run-tests.pl
submissions/denial-of-service/structural-analysis/: README.md  any-qoa.js  any-qod.js  count-star-height.js  is-linear-engine-compatible.js  jasmine.json  package.json  run-structural-analysis.pl
submissions/denial-of-service/visualization/: README.md  cdf-unique-patterns.py  interview-consent-form-REDOS.docx  loc-vs-unique.py  module-size-vs-popularity.py  regex-semantic-behavior.py  requirements.txt  vuln-module-popularity-hist.py
submissions/detection-of-clones/: INSTALL.md  README.md  STATUS.md
submissions/detection-of-clones/input/: README.txt
submissions/energy/: INSTALL.md  README.md  STATUS.md
submissions/first-pointer/: INFO.txt  LICENSE.txt  STATUS.txt  view
submissions/first-pointer/artifact/: run.py
submissions/function-embedding/: INSTALL  STATUS  run.sh  runminer.py
submissions/parameterized-model-counting/: INSTALL  LICENSE  README  STATUS
submissions/pattern-fuzzing/: README.md  STATUS.md  contact-info.txt
submissions/presence-effects/: INSTALL  README  STATUS
submissions/presence-effects/data/: BOA_METHOD_OUTPUT.txt
submissions/presence-effects/results/: io-examples.txt  patterns-exception.txt  precondition-exceptions-examples.txt  substitutability-calls.txt  substitutability-study-bug.txt  substitutability-study.txt  substitutability-violation-bug.txt  substitutability-violation-kind.txt  synchronized-examples.txt  unsupported-operation-examples.txt
submissions/presence-effects/src/: combined-effect-comparison.boa  exception-effect-comparison.boa  io-effect-comparison.boa  method-call-comparison.boa  synchronized-effect-comparison.boa
submissions/sbaltes-expertise-artifact/: .gitignore  INSTALL.md  LICENSE.md  README.md  STATUS.md
submissions/sbaltes-expertise-artifact/doc/: RQs phase 1.md  RQs phase 3.md
submissions/sbaltes-expertise-artifact/results/: correlations_sample1_coefficients.csv  correlations_sample1_n.csv  correlations_sample1_p-values.csv  correlations_sample2_coefficients.csv  correlations_sample2_n.csv  correlations_sample2_p-values.csv  correlations_sample3_coefficients.csv  correlations_sample3_n.csv  correlations_sample3_p-values.csv  demographics.csv
submissions/sbaltes-expertise-artifact/src/: closed_ended_questions.R  correlations.R  demographics.R  install_packages.R  load_samples.R  self-assessments.R
(+28519 files in other folders)
