<package>
  <name>cpr_robots_hwinterface</name>
  <version>0.0.1</version>
  <description>This node subscribes to twist messages for the mobile platform slider. It 
     converts the velocities of theses messages into joint velocities for the 
     mecanum drive. These joint velocities are forwarded to the CAN bus.

     This node can be tested together with the teleop node in package cpr_robots_teleop. 
     There you can also find a .launch file.</description>
  <maintainer email="christian.meyer@cpr-robots.com">Christian Meyer</maintainer>
  <maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cpr_robots_hwinterface</url>

  <author>christian.meyer@cpr-robots.com</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cpr_robots_comm_rs232</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>nav_msgs</build_depend> 
  <build_depend>nodelet</build_depend> 
  
  <run_depend>cpr_robots_comm_rs232</run_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <export>
  	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
